Merge of JGROUPS related changes from GEODE
  Intermediate checkin for tracking, need to make more changes for making it compilable.